Navbar issue solve only overlap of element issue is remaining

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -33,7 +33,7 @@ body{
     
 } */
 
-.displaybtn{
+/* .displaybtn{
     display: block;
 }
 
@@ -45,5 +45,5 @@ body{
 .displaybtn:hover + .h2class{
     display: block;
     
-}
+} */
 
